--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-day la trang dau
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Title of the document</title>
+</head>
+
+<body style="background:rgb(60, 63, 65);color:rgb(201, 201, 201);">
+    <h1>Tieu de bai viet</h1>
+    <span>Content of the document......</span>
+    
+</body>
+
+</html>
