--- a/UTF-8HTML.html
+++ b/UTF-8HTML.html
@@ -12,6 +12,7 @@
 
 Number: <input type="text" ID="txtValue" value=""/>
 <input type="button" value="Click to Test!" ID="btnRunTest" />
+<div id="divView"></div>
 
 <script type="text/javascript">
     function testUint8() {
@@ -988,6 +989,7 @@ Number: <input type="text" ID="txtValue" value=""/>
         }
 
         console.log(splstr);
+        document.getElementById("divView").innerHTML = splstr;
         
         var num = 2048;
         console.log(num.toString(2));
