--- a/UTF-8HTML.html
+++ b/UTF-8HTML.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>BitArray</title>
-<script type="text/javascript" src="aes-js.js"></script>
+<script type="text/javascript" src="./aes-js.js"></script>
 </head>
 <body>
 
