--- a/OneHTML.html
+++ b/OneHTML.html
@@ -9,9 +9,12 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
-Number: <input type="text" ID="txtValue" value=""/>
+<div>
+<textarea type="text" ID="txtValue" rows="8" cols="50"></textarea>
+</div>
+<div>
 <input type="button" value="Click to Test!" ID="btnRunTest" />
+</div>
 <div id="divView"></div>
 
 <script type="text/javascript">
