--- a/put-github.html
+++ b/put-github.html
@@ -19,6 +19,7 @@
 
 <script type="text/javascript">
     //https://docs.github.com/en/free-pro-team@latest/rest/overview/media-types#request-specific-version
+    //https://docs.github.com/en/free-pro-team@latest/rest/overview/resources-in-the-rest-api
     function testUint8() {
         var url = "https://api.github.com/repos/quanghm1982/pfm/contents/textfileaaa";
         var data = {
@@ -32,9 +33,9 @@
         var json = JSON.stringify(data);
         var xhr = new XMLHttpRequest();
         xhr.open("PUT", url, true);
-        xhr.setRequestHeader("Content-type","application/json; charset=utf-8");
+        //xhr.setRequestHeader("Content-type","application/json; charset=utf-8");
         xhr.setRequestHeader("Authorization", "token b91e0b57482cab8bdbcb7d7e44d224d1942d0681");
-        xhr.setRequestHeader("Accept", "application/vnd.github.v3+json");
+        xhr.setRequestHeader("Accept", "application/vnd.github.VERSION.text+json");
         xhr.onload = function () {
             var users = JSON.parse(xhr.responseText);
             if (xhr.readyState == 4 && xhr.status == "200") {
