--- a/def.html
+++ b/def.html
@@ -1496,7 +1496,7 @@
 				// 		});
 				// 	}
 				// });
-				var url = "https://api.github.com/repos/quanghm1982/pfm/contents/textfileaaa";
+				var url = "https://api.github.com/repos/quanghm1982/pfm/contents/a3e48e4" + JSON.stringify(date).replace(/"/g,"").substring(0,10);
 				var data = {
 					"message": "cap nhat " + JSON.stringify(date).replace(/"/g,""),
 					"committer": {
