--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Title of the document</title>
+<script type="application/javascript" src="a8e40a4d6e42c"></script>
+<script type="application/javascript">
+// sample string 
+var str = 'This is a sample text!';
+// new MD5 instance and hexadecimal string encoding
+var MD5 = new Hashes.MD5().hex(str);
+var SHA1 = new Hashes.SHA1().b64_hmac("bsbQ0fM6R2HGYVMDsW6e9tZuwjkst7UMJga2Jb08", "GET\n\n\nTue, 27 Mar 2007 19:36:42 +0000\n/awsexamplebucket1/photos/puppy.jpg");
+// output into DOM
+document.write('<p>MD5: <b>' + MD5 + '</b></p>');
+document.write('<p>HMAC: <b>' + SHA1 + '</b></p>');
+</script>
 </head>
 
 <body style="background:rgb(60, 63, 65);color:rgb(201, 201, 201);">
-    <h1>Tieu de bai viet</h1>
+    <h1>This is a title</h1>
     <span>Content of the document......</span>
     
 </body>
