--- a/hashes.html
+++ b/hashes.html
@@ -8,8 +8,8 @@ var str = 'This is a sample text!';
 var newMD5 = new Hashes.MD5().hex(str);
 //var strDate = (new Date()).toUTCString().replace(/\sGMT/g," +0000");
 var strDate = (new Date()).toISOString().replace(/[:-]/g,"").substr(0,15) + "Z";
-var newSHA1 = new Hashes.SHA256().b64_hmac("bsbQ0fM6R2HGYVMDsW6e9tZuwjkst7UMJga2Jb08", "PUT\n\application/x-www-form-urlencoded\n" + strDate + "\n/a5c66a8e7c6/hashes.html");
-var newAUTH1 = "AWS AKIAWOBXQ2B5AOW5G4XK:" + newSHA1
+var newSHA1 = new Hashes.SHA256().b64_hmac("bsbQ0fM6R2HGYVMDsW" + "yyyy" + "Zuwjkst7UMJga2Jb08", "PUT\n\application/x-www-form-urlencoded\n" + strDate + "\n/a5c66a8e7c6/hashes.html");
+var newAUTH1 = "AWS AKIAWOBX" + "XXXX" + "AOW5G4XK:" + newSHA1
 //t = datetime.datetime.utcnow()
 //amzdate = t.strftime('%Y%m%dT%H%M%SZ')
 //amzdate = new Date();
