--- a/hashes.html
+++ b/hashes.html
@@ -1,23 +1,30 @@
-<html>
-<head>
-<script type="application/javascript" src="hashes.js"></script>
-<script type="application/javascript">
-// sample string 
 var str = 'This is a sample text!';
 // new MD5 instance and hexadecimal string encoding
 var newMD5 = new Hashes.MD5().hex(str);
 //var strDate = (new Date()).toUTCString().replace(/\sGMT/g," +0000");
 var strDate = (new Date()).toISOString().replace(/[:-]/g,"").substr(0,15) + "Z";
-var newSHA1 = new Hashes.SHA256().b64_hmac("bsbQ0fM6R2HGYVMDsW" + "yyyy" + "Zuwjkst7UMJga2Jb08", "PUT\n\application/x-www-form-urlencoded\n" + strDate + "\n/a5c66a8e7c6/hashes.html");
-var newAUTH1 = "AWS AKIAWOBX" + "XXXX" + "AOW5G4XK:" + newSHA1
+var newSHA1 = new Hashes.SHA256().b64_hmac("bsbQ0fM6R2HGYVMDsWyyyyZuwjkst7UMJga2Jb08", "PUT\n\application/x-www-form-urlencoded\n" + strDate + "\n/a5c66a8e7c6/hashes.html");
+var newAUTH1 = "AWS AKIAWOBXxxxxAOW5G4XK:" + newSHA1
 //t = datetime.datetime.utcnow()
 //amzdate = t.strftime('%Y%m%dT%H%M%SZ')
 //amzdate = new Date();
 // output into DOM
+var a_region = "us-east-2";
+var a_service = "s3";
+var a_request = "aws4_request"
+var a_secret = "yyyy";
+var a_access = "xxxx";
+//step 1:
+var a1_hash = new Hashes.SHA256().hex("GET\n/a5d04d\n\ncontent-type:text/plain\nhost:a5c66a8e7c6.s3.us-east-2.amazonaws.com\nx-amz-content-sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\nx-amz-date:" + strDate + "\n\ncontent-type;host;x-amz-content-sha256;x-amz-date\ne3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855");
+var a2_hash = new Hashes.SHA256().hex("AWS4-HMAC-SHA256\n" + strDate + "\n" + strDate.substr(0,8) + "/" + a_region + "/" + a_service + "/" + a_region + "\n" + a1_hash);
+var a3_hash = new Hashes.SHA256().hex(new Hashes.SHA256().hex(new Hashes.SHA256().hex(new Hashes.SHA256().hex("AWS4" + "bsbQ0fM6R2HGYVMDsW" + a_secret + "Zuwjkst7UMJga2Jb08", strDate), a_region), a_service), a_request);
+var a4_hash = new Hashes.SHA256().hex(a3_hash, a2_hash);
+var a4_auth = "AWS4-HMAC-SHA256 Credential=AKIAWOBX" + a_access + "AOW5G4XK/" + strDate.substr(0,8) + "/" + a_region + "/" + a_service + "/" + a_request + ",SignedHeaders=host;x-amz-content-sha256;x-amz-date,Signature=" + a4_hash;
 document.write('<p>MD5: <b>' + newMD5 + '</b></p>');
 document.write('<p>HMAC: <b>' + newSHA1 + '</b></p>');
 document.write('<p>DATE: <b>' + strDate + '</b></p>');
 document.write('<p>Authorization: <b>' + newAUTH1 + '</b></p>');
+document.write('<p>Authorization: <b>' + a4_auth + '</b></p>');
 </script>
 </head>
 <body>
