--- a/hashes.html
+++ b/hashes.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type="application/javascript" src="a6e4a5d12c4da2d46d16"></script>
+<script type="application/javascript" src="./a6e4a5d12c4da2d46d16"></script>
 <script type="application/javascript">
 function test() {
 // sample string 
