--- a/hashes.html
+++ b/hashes.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<script type="application/javascript" src="./a6e4a5d12c4da2d46d16"></script>
-<script type="application/javascript">
+<script type="text/javascript" src="./a6e4a5d12c4da2d46d16"></script>
+<script type="text/javascript">
 function test() {
 // sample string 
 var str = 'This is a sample text!';
