--- a/hashes.html
+++ b/hashes.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 <script type="text/javascript" src="./a6e4a5d12c4da2d46d16"></script>
 <script type="text/javascript">
 function test() {
