--- a/hashes.html
+++ b/hashes.html
@@ -11,7 +11,8 @@ var newMD5 = new Hashes.MD5().hex(str);
 //var strDate = (new Date()).toUTCString().replace(/\sGMT/g," +0000");
 var strDate = (new Date()).toISOString().replace(/[:-]/g,"").substr(0,15) + "Z";
 var newSHA1 = new Hashes.SHA256().b64_hmac("bsbQ0fM6R2HGYVMDsWyyyyZuwjkst7UMJga2Jb08", "PUT\n\application/x-www-form-urlencoded\n" + strDate + "\n/a5c66a8e7c6/hashes.html");
-var newAUTH1 = "AWS AKIAWOBXxxxxAOW5G4XK:" + newSHA1
+var newAUTH1 = "AWS AKIAWOBXxxxxAOW5G4XK:" + newSHA1;
+var testStr = new Hashes.SHA256().hex("");
 //t = datetime.datetime.utcnow()
 //amzdate = t.strftime('%Y%m%dT%H%M%SZ')
 //amzdate = new Date();
@@ -30,6 +31,7 @@ var a4_hash = new Hashes.SHA256().hex_hmac(a3_hash, a2_hash);
 var a4_auth = "AWS4-HMAC-SHA256 Credential=AKIAWOBX" + a_access + "AOW5G4XK/" + strDate.substr(0,8) + "/" + a_region + "/" + a_service + "/" + a_request + ", SignedHeaders=host;x-amz-content-sha256;x-amz-date, Signature=" + a4_hash;
 var strView = '<p>MD5: <b>' + newMD5 + '</b></p>';
 strView += '<p>HMAC: <b>' + newSHA1 + '</b></p>';
+strView += '<p>EMPTY STR: <b>' + testStr + '</b></p>';
 strView += '<p>DATE: <b>' + strDate + '</b></p>';
 strView += '<p>HASHING: <b>' + a1_hash + '</b></p>';
 strView += '<p>Authorization: <b>' + newAUTH1 + '</b></p>';
