--- a/hashes.html
+++ b/hashes.html
@@ -46,6 +46,7 @@ document.getElementById("divView").innerHTML = strView;
 <input type="text" id="txt1" value="" />
 <input type="text" id="txt2" value="" />
 <input type="text" id="txt3" value="" />
+<input type="text" id="txt4" value="" />
 <input type="button" value="Click" id="btnRunTest" />
 <div id="divView"></div>
 <script type="text/javascript">
