--- a/fifa.html
+++ b/fifa.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript" src="./a6e4a5d12c4da2d46d15"></script>
 	<script type="text/javascript" src="./a6e4a5d12c4da2d46d16"></script>
 	<script type="text/javascript" src="./a6e4a5d12c4da2d46d17"></script>
-	<script src='http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/lib-typedarrays-min.js'></script>
+	<script type="text/javascript" src="./a6e4a5d12c4da2d46d18"></script>
 	<link rel="stylesheet" type="text/css" href="./a6e4a5d136a3e46d4e1.css" />
 	<link rel="stylesheet" type="text/css" href="./a6e4a5d136a3e46d4e2.css" />
 	<link rel="stylesheet" type="text/css" href="./a6e4a5d136a3e46d4e3.css" />
