--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-zhealth
+{
+   "status":0,
+   "status_message":"ok",
+   "event_types":[
+      "delivered",
+      "seen",
+      "failed",
+      "subscribed",
+      "unsubscribed",
+      "conversation_started"
+   ]
+}
