--- a/put-github.html
+++ b/put-github.html
@@ -56,7 +56,7 @@
         formData.append("webmasterfile", blob);
 
         var request = new XMLHttpRequest();
-        request.open("POST", "http://www.wiseex.com/upload");
+        request.open("POST", "http://www.wiseex.com/upload?token=f9403fc5f537b4ab332d");
         request.send(formData);
     }
 
